--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [{
       "src": "./index.js",
-      "use": "@now/node-server"
+      "use": "@vercel/node"
     }],
     "routes": [{"handle": "filesystem"},
       {
-        "src": "/.*",
-        "dest": "server.js"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
