--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fcm-node": "^1.6.1",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
   }
